# cometscorer

./: comet_score_dataset.py  pyproject.toml  upload_scored_dataset.py
